first good commit

--- a/zul-v1.html
+++ b/zul-v1.html
@@ -34,7 +34,7 @@
 
 <template name="adminPage">
   <h1>Hello World!</h1>
-  <input type="button" value="Add New Bar" onclick="document.location='/addbar'"/>
+  <input type="button" value="Add New Bar" onclick="document.location='/newbar'"/>
   <input type="button" value="Get Bar" onclick="document.location='/getbar'"/>
 </template>
 
